update owner search in contact details

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -299,7 +299,7 @@ Weitere Informationen zum Debitorenkonto findest du auf der Handbuchseite xref:a
 |Gib ggf. eine externe Nummer für den Kontakt ein. Externe Nummern können für interne Zwecke genutzt werden und werden _nicht_ automatisch vergeben.
 
 | *Eigner*
-|Wähle einen Eigner für den Kontakt. Wenn kein Eigner gewählt werden soll, wähle die leere Option. +
+|Wähle einen Eigner für den Kontakt. Gib einen Buchstaben des Eignernamens ein, damit dein plentymarkets System dir bereits gespeicherte Eigner zum Auswählen vorschlägt. Wenn kein Eigner gewählt werden soll, wähle die leere Option. +
 *_Hinweis:_* In der Liste werden alle Benutzer:innen (Eigner) angezeigt, bei denen im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konten » [Benutzer öffnen]* im Tab *Eigner* die Option *Kontakt* aktiviert ist.
 
 | *Handelsvertreter, der dem Kontakt zugeordnet ist*
