--- a/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
@@ -253,8 +253,9 @@ Weitere Informationen zum Debitorenkonto findest du auf der Handbuchseite xref:a
 Wenn die Option gewählt ist (material:check_box[role=skyBlue]), ist der Kontakt gesperrt und kann sich _nicht_ mehr in deinem plentyShop einloggen. Wenn die Option nicht gewählt ist (material:check_box_outline_blank[]), kann sich der Kontakt in deinem plentyShop einloggen.
 
 | *Eigner*
-|Welcher Eigner soll dem Kontakt zugeordnet werden? Wähle einen Namen aus der Dropdown-Liste. +
-*_Hinweis:_* In der Liste werden alle Benutzer:innen (Eigner) angezeigt, bei denen im Benutzer:innenkonto im Tab *Eigner* die Option *Kontakt* aktiviert ist.
+|Welcher Eigner soll dem Kontakt zugeordnet werden? +
+Gib einen Buchstaben des Eignernamens ein, damit dein plentymarkets System dir bereits gespeicherte Eigner vorschlägt. Wähle einen Namen aus der Dropdown-Liste. +
+*_Hinweis:_* In der Liste werden alle Benutzer:innen (Eigner) angezeigt, bei denen im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konten » [Benutzer öffnen]* im Tab *Eigner* die Option *Kontakt* aktiviert ist.
 
 | *Tags*
 |Möchtest du dem Kontakt Tags zuweisen? Wähle die Tags aus der Vorschlagsliste. +
