add order date filter to pcl2.0

--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -61,14 +61,25 @@ image::fulfillment:package-content-list-search-field-example.png[width=640, heig
 .Filteroptionen in der Paketinhaltsliste
 [cols="1,3"]
 |====
-|Einstellung |Erläuterung
+|Filter |Erläuterung
 
-|*ID*
+| *ID*
 |Gib die Auftrags-ID ein.
 
-|*Paketzustand*
-|Wähle den Paketzustand aus der Dropdown-Liste.
+| *Packzustand*
+|Wähle den Packzustand aus der Dropdown-Liste. +
+Verfügbare Optionen: *Alle*, *Verpackt* und *Unverpackt*.
+
+| *Auftragsdatum*
+|Wähle ein Datum aus dem Kalender (material:today[]) und einen Operator aus der linken Dropdown-Liste. +
+
+*Ist Gleich* (=): Die Suchergebnisse liefern nur Aufträge mit exakt diesem Datum. +
+*Kleiner als oder gleich* (<=): Die Suchergebnisse liefern nur Aufträge, deren Datum kleiner oder gleich dem eingegebenen Wert ist. +
+*Größer als oder gleich* (>=): Die Suchergebnisse liefern nur Aufträge, deren Datum größer oder gleich dem eingegebenen Wert ist. +
+*Liegt zwischen* ([]): Die Suchergebnisse liefern nur Aufträge, deren Datum zwischen den eingegebenen Werten liegt.
 |====
+
+// TODO: Operatoren auch für die ID und den Paketzustand ergänzen.
 
 [#aktuellen-filter-speichern]
 === Aktuellen Filter speichern
