--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -12,7 +12,7 @@ Die Detailansicht eines Auftrags unterscheidet sich je nach Auftragstyp. Für je
 Öffnest du einen Auftrag, stehen dir je nach Auftragstyp verschiedene Funktionen in der Toolbar zur Verfügung. Entscheide hier selbst, welche Schaltflächen du direkt angezeigt bekommen möchtest und welche Schaltflächen im Kontextmenü (material:more_vert[]) verfügbar sein sollen. +
 Standardmäßig sieht die Toolbar aus wie folgt:
 
-image::toolbar-new-order-ui.png[width=640, height=360]
+image::auftraege:toolbar-new-order-ui.png[]
 
 [.instruction]
 Toolbar gestalten:
@@ -569,4 +569,4 @@ Bearbeitung abschließen:
 
 Hast du Änderungen an einem Auftrag vorgenommen, erscheint ein Sternchen links in der Seitennavigation. Dieses Sternchen zeigt an, in welchen Bereichen ungespeicherte Änderungen vorhanden sind. Sobald du die Änderungen speicherst (material:save[]) oder die Änderungen auf den vorherigen Stand zurücksetzt, verschwindet das Sternchen wieder.
 
-image::unsaved-changes-de.png[width=640, height=360]
+image::auftraegeunsaved-changes-de.png[]
