--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -569,4 +569,4 @@ Bearbeitung abschließen:
 
 Hast du Änderungen an einem Auftrag vorgenommen, erscheint ein Sternchen links in der Seitennavigation. Dieses Sternchen zeigt an, in welchen Bereichen ungespeicherte Änderungen vorhanden sind. Sobald du die Änderungen speicherst (material:save[]) oder die Änderungen auf den vorherigen Stand zurücksetzt, verschwindet das Sternchen wieder.
 
-image::auftraegeunsaved-changes-de.png[]
+image::auftraege:unsaved-changes-de.png[]
