--- a/docs/de-de/modules/auftraege/pages/new-order-ui-beta.adoc
+++ b/docs/de-de/modules/auftraege/pages/new-order-ui-beta.adoc
@@ -10,7 +10,8 @@ Die neue Auftrags-UI befindet sich nun in der sogenannten _open beta-Phase_. Som
 
 Das Menü *Aufträge » Aufträge (Testphase)* ist wie folgt aufgebaut:
 
-image::menu-structure-orders-de.png[]
+image::auftraege:menu-structure-orders-de.png[]
+
 
 * *Navigation*: In der Navigation links navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt. Falls du mehrere Aufträge, Auftragstypen oder Varianten gleichzeitig geöffnet hast, werden diese untereinander angezeigt. Klicke auf material:menu[], um die Navigationsleiste ein- oder auszublenden.
 Die Seitennavigation wird automatisch angepasst, wenn sich Einträge verschieben, Einträge entfernt oder hinzugefügt werden.
