--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -12,7 +12,7 @@ Die Detailansicht eines Auftrags unterscheidet sich je nach Auftragstyp. Für je
 Öffnest du einen Auftrag, stehen dir je nach Auftragstyp verschiedene Funktionen in der Toolbar zur Verfügung. Entscheide hier selbst, welche Schaltflächen du direkt angezeigt bekommen möchtest und welche Schaltflächen im Kontextmenü (material:more_vert[]) verfügbar sein sollen. +
 Standardmäßig sieht die Toolbar aus wie folgt:
 
-image::auftraege:toolbar-new-order-ui.png[]
+image::auftraege:toolbar-new-order-ui-de.png[]
 
 [.instruction]
 Toolbar gestalten:
