ADD labels to shipping centre procedure

--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -2280,6 +2280,12 @@ Einstellungen
 
 | **Versanddienstleister**
 |xref:fulfillment:versand-vorbereiten.adoc#800[Versanddienstleister] aus der Dropdown-Liste wählen.
+
+| *Etiketten generieren*
+|Wähle eine Option zum Generieren von Etiketten: +
+*Etiketten immer generieren*: Neue Etiketten werden registriert und sowohl vorhandene als auch neue Etiketten werden gedruckt oder gespeichert. +
+*Etiketten generieren wenn keine existieren*: Existieren bereits Etiketten, werden diese gedruckt oder gespeichert. Sind keine Etiketten vorhanden, werden neue Etiketten registriert und gedruckt oder gespeichert. +
+*Bestehende Etiketten verwenden*: Nur vorhandene Etiketten werden gedruckt oder gespeichert. Existieren keine Etiketten, wird eine entsprechende Fehlermeldung angezeigt.
 |====
 
 [.subhead]
