FIX several broken links from the list

--- a/docs/de-de/modules/artikel/pages/faq-pim.adoc
+++ b/docs/de-de/modules/artikel/pages/faq-pim.adoc
@@ -561,7 +561,7 @@ Dort findest du detaillierte Anleitungen und praktische Beispiele.
 
 Ja.
 Es gibt ein Tool, mit dem du deine eBay-Listings in das System importieren und gleichzeitig Artikel anlegen kannst.
-xref:ebay:ebay-einrichten.adoc#11000[Weitere Informationen zur Nutzung des eBay-Import-Tools].
+xref:maerkte:ebay-einrichten.adoc#11000[Weitere Informationen zur Nutzung des eBay-Import-Tools].
 
 --
 
