--- a/docs/en-gb/modules/item/pages/barcodes.adoc
+++ b/docs/en-gb/modules/item/pages/barcodes.adoc
@@ -434,7 +434,7 @@ Unit price
 
 |Storage location
 |
-. Enter X-Y coordinates to display the <<stock-management/new-incoming-items#200, variation’s suggested storage location>> on the label. +
+. Enter X-Y coordinates to display the xref:stock-management:new-incoming-items.adoc#200[variation’s suggested storage location] on the label. +
 . xref:item:barcodes.adoc#980[Configure the appearance].
 
 |Stock; +
@@ -670,7 +670,7 @@ While receiving goods::
 --
 
 Do you want to automatically print labels while receiving goods?
-Then create a xref:automation:setting-up-processes.adoc#[plentymarkets process] and add <<automation/processes/procedures#150, the “item label” procedure>> to it.
+Then create a xref:automation:setting-up-processes.adoc#[plentymarkets process] and add xref:automation:procedures.adoc#150[the “item label” procedure] to it.
 
 --
 ====
