--- a/docs/en-gb/modules/item/pages/checklist-categories-visibility.adoc
+++ b/docs/en-gb/modules/item/pages/checklist-categories-visibility.adoc
@@ -61,7 +61,7 @@ In other words, if you select the option *Display* for a sub-category, then make
 == Is a variation linked to the category?
 
 //tag::variante[]
-A category will only be visible if it’s linked to at least one <<item/online-store/checklist-items-visibility#, variation that’s visible in the plentyShop>>.
+A category will only be visible if it’s linked to at least one xref:item:checklist-items-visibility.adoc#[variation that’s visible in the plentyShop].
 
 [.instruction]
 Linking a variation to a category:
