--- a/docs/en-gb/modules/item/pages/new-ui.adoc
+++ b/docs/en-gb/modules/item/pages/new-ui.adoc
@@ -9,7 +9,7 @@ zuletzt bearbeitet 30.03.2022
 This chapter describes the new item UI, which entered the open beta phase in March, 2022.
 
 * UI stands for [.underline]##U##ser [.underline]##I##nterface.
-With the phrase "new item UI", we mean that there is a new menu for managing item data in plentymarkets. 
+With the phrase "new item UI", we mean that there is a new menu for managing item data in plentymarkets.
 * Open beta means that you can see and test the new item UI.
 However, the new item UI does not yet include every function.
 
@@ -103,7 +103,7 @@ xref:item:search.adoc#100[Further information].
 
 Yes.
 You can save your search settings to apply them again more quickly and easily in the future.
-xref:item:search.adoc#200[Further information].
+xref:item:item-search.adoc#200[Further information].
 
 --
 
