--- a/docs/en-gb/modules/item/pages/serial-numbers.adoc
+++ b/docs/en-gb/modules/item/pages/serial-numbers.adoc
@@ -175,7 +175,7 @@ include::_includes:partial$event-procedure.adoc[]
 [#1200]
 == Exporting serial numbers
 
-Do you want to export serial numbers out of your plentymarkets system? For example, do you want to send your manufacturer a list of all the used serial numbers once per day? Use the so-called xref:data:FormatDesigner.adoc#[FormatDesigner]! More specifically, use xref:data:item.adoc#500[ItemSerialNumber] within the “Item” format type.
+Do you want to export serial numbers out of your plentymarkets system? For example, do you want to send your manufacturer a list of all the used serial numbers once per day? Use the so-called xref:data:FormatDesigner.adoc#[FormatDesigner]! More specifically, use xref:data:formatdesigner-item.adoc#500[ItemSerialNumber] within the “Item” format type.
 
 [#1300]
 == Accepting returns with serial numbers
