--- a/docs/en-gb/modules/item/pages/categories.adoc
+++ b/docs/en-gb/modules/item/pages/categories.adoc
@@ -76,7 +76,7 @@ a|
 ====
 How many categories can be on the first level without overwhelming your customers?
 At what depth are your categories no longer visited?
-xref:online-store:shop-builder.adoc#_category_navigation[While setting up your plentyShop], you'll decide how many category levels should be displayed in the header.
+xref:online-store:online-store.adoc#[While setting up your plentyShop], you'll decide how many category levels should be displayed in the header.
 ====
 
 ////
@@ -147,7 +147,7 @@ plentyShop and ShopBuilder::
 New plentymarkets systems come equipped with plentyShop LTS and a ShopBuilder tool.
 You can use these tools to design an attractive store without having to learn HTML and CSS first.
 ShopBuilder helps you create the pages of your website and also the categories.
-So if you want to use ShopBuilder to create your plentyShop, then you might also want to xref:online-store:shop-builder.adoc#20[use ShopBuilder to create your categories] too.
+So if you want to use ShopBuilder to create your plentyShop, then you might also want to xref:online-store:shop-builder.adoc#create-category[use ShopBuilder to create your categories] too.
 
 --
 ====
@@ -215,7 +215,7 @@ First, save some basic information about your category, e.g.:
 * xref:item:categories.adoc#intable-use-case[what do you want to use the category for]?
 * xref:item:categories.adoc#intable-url[what should the URL be]?
 * xref:item:categories.adoc#intable-meta-data[does the category have any meta data that is relevant for SEO]?
-* <<item/settings/categories#intable-login, should people only be able to see the category if they’ve logged in>>?
+* xref:item:categories.adoc#intable-login[should people only be able to see the category if they’ve logged in]?
 
 [TIP]
 .Why don’t I see some of the settings?
@@ -407,7 +407,7 @@ Displaying category images in the plentyShop:
 . If needed, repeat the procedure to select a second category image. This time, click on terra:item_image_selected_2[role="blue"] *Image 2*.
 . *Save* (terra:save[role="green"]) the settings.
 . Go to *CMS » ShopBuilder*.
-. Open the category’s xref:online-store:shop-builder.adoc#55[editor view].
+. Open the category’s xref:online-store:shop-builder.adoc#editor-view[editor view].
 . Insert the ShopBuilder widget xref:online-store:shop-builder.adoc#_background_image[Image » Background image].
 . Open the drop-down list *Background image* and select the option *Category image 1* or *Category image 2*.
 . *Save* (terra:save[role="green"]) the settings.
