--- a/docs/en-gb/modules/item/pages/manufacturers.adoc
+++ b/docs/en-gb/modules/item/pages/manufacturers.adoc
@@ -198,9 +198,9 @@ Once you’ve saved your manufacturer data in plentymarkets, you’ll specify wh
 There are several different ways to link items to manufacturers:
 
 * Specify the manufacturer xref:item:new-item.adoc#200[while you manually create a new item].
-* Specify the manufacturer <<item/managing-items#40, in an existing item’s Global tab>>.
+* Specify the manufacturer xref:item:managing-items#40[in an existing item’s Global tab].
 * xref:item:mass-processing.adoc#100[Use the group function] to manually specify the manufacturer for several existing items at once.
-* Do you want to import your items? Then <<data/importing-data/sync-types/elasticSync-item#2260, specify each item’s manufacturer in the CSV file>> that you will import.
+* Do you want to import your items? Then xref:data:elasticSync-item#2260[specify each item’s manufacturer in the CSV file] that you will import.
 
 [#450]
 == Checking the plentyShop settings
