--- a/docs/de-de/modules/auftraege/pages/order-type-offer.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-offer.adoc
@@ -26,26 +26,26 @@ Dokument Angebot manuell erzeugen:
 . Klicke rechts auf *Dokument erstellen* (material:note_add[]).
 . Wähle die Option *Angebot*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-generate-offer-document>>.
-. Klicke auf *Ausführen*, um das Dokument Angebot zu erzeugen.
+. Klicke auf *Ausführen*, um das Dokument *Angebot* zu erzeugen.
 
 [[table-generate-offer-document]]
-.Einstellungen für das Dokument Angebot
+.Einstellungen für das Dokument *Angebot*
 [cols="1,3"]
 |===
 |Einstellung |Erläuterung
 
 | *Datum*
-|Gib das Datum ein, das auf dem Dokument Angebot angezeigt werden soll oder wähle ein Datum über den Kalender (material:today[]). Standardmäßig ist das aktuelle Datum voreingestellt.
+|Gib das Datum ein, das auf dem Dokument *Angebot* angezeigt werden soll oder wähle ein Datum über den Kalender (material:today[]). Standardmäßig ist das aktuelle Datum voreingestellt.
 
 |*Kommentar*
-|Gib optional einen Text ein, der auf dem Dokument Angebot unterhalb der Artikelpositionen angezeigt wird.
+|Gib optional einen Text ein, der auf dem Dokument *Angebot* unterhalb der Artikelpositionen angezeigt wird.
 
 |===
 
 [#automate-shipping-offer-doc]
 == Versand von Angebotsdokumenten automatisieren
 
-Du hast für Kund:innen individuelle Angebote erstellt, die dazugehörigen Dokumente erzeugt und möchtest diese nun an die Kund:innen senden? Diesen Arbeitsschritt kannst du automatisieren, indem du die passende Ereignisaktion einrichtest. Zum Versenden des Dokuments Angebot als E-Mail Anhang empfehlen wir dir die in <<table-event-procedure-sending-offer-document>> beschriebene Ereignisaktion. Gehe wie im Folgenden beschrieben vor, um die Ereignisaktion einzurichten.
+Du hast für Kund:innen individuelle Angebote erstellt, die dazugehörigen Dokumente erzeugt und möchtest diese nun an die Kund:innen senden? Diesen Arbeitsschritt kannst du automatisieren, indem du die passende Ereignisaktion einrichtest. Zum Versenden des Dokuments *Angebot* als E-Mail Anhang empfehlen wir dir die in <<table-event-procedure-sending-offer-document>> beschriebene Ereignisaktion. Gehe wie im Folgenden beschrieben vor, um die Ereignisaktion einzurichten.
 
 :table-event-procedure: <<table-event-procedure-sending-offer-document>>
 include::_includes:partial$event-procedure.adoc[]
@@ -66,11 +66,11 @@ include::_includes:partial$event-procedure.adoc[]
 
 | *Aktion*
 | *Kunde > E-Mail versenden*
-|Über Hinzufügen (icon:plus-square[role="green"]) für den *Kunden* die entsprechende E-Mail-Vorlage für den Versand des Angebots als PDF (z.B. "Angebot als PDF senden") wählen.
+|Wähle für die Kund:in über *Hinzufügen* (icon:plus-square[role="green"]) die entsprechende E-Mail-Vorlage für den Versand des Angebots als PDF (z.B. "Angebot als PDF senden").
 |===
 
 [TIP]
 .Du siehst die passende E-Mail-Vorlage nicht?
 ======
-Du siehst für die Ereignisaktion "Angebot als PDF versenden" die passende E-Mail-Vorlage nicht? Dann liegt das daran, dass du sie noch nicht erstellt hast. Dies kannst du im Menü *Einrichtung » Mandant » _Mandant wählen_ » E-Mail » Vorlagen* machen. Klicke dort auf *Neue E-Mail-Vorlage* (icon:plus-square[role="green"]) und erstelle die Vorlage nach deinen Anforderungen. Der Name, den du hier für die E-Mail-Vorlage vergibst, wird dann auch in den Ereignisaktionen ausgegeben. Weitere Informationen zum Einrichten findest du auf der Handbuchseite xref:crm:e-mails-versenden.adoc#1200[E-Mail-Vorlage erstellen].
+Du siehst für die Ereignisaktion *Angebot als PDF versenden* die passende E-Mail-Vorlage nicht? Dann liegt das daran, dass du sie noch nicht erstellt hast. Dies kannst du im Menü *Einrichtung » Mandant » _Mandant wählen_ » E-Mail » Vorlagen* machen. Klicke dort auf *Neue E-Mail-Vorlage* (icon:plus-square[role="green"]) und erstelle die Vorlage nach deinen Anforderungen. Der Name, den du hier für die E-Mail-Vorlage vergibst, wird dann auch in den Ereignisaktionen ausgegeben. Weitere Informationen zum Einrichten findest du auf der Handbuchseite xref:crm:e-mails-versenden.adoc#1200[E-Mail-Vorlage erstellen].
 ======
