--- a/docs/de-de/modules/auftraege/pages/order-type-repair.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-repair.adoc
@@ -37,7 +37,7 @@ Zustände für Reparaturen anlegen:
 == Reparatur anlegen
 
 [.instruction]
-Gehe wie beschrieben vor, um eine Reparatur anzulegen:
+Gehe wie unten beschrieben vor, um eine Reparatur anzulegen:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
@@ -50,7 +50,7 @@ Gehe wie beschrieben vor, um eine Reparatur anzulegen:
 → Die Reparatur wird angelegt.
 
 [[table-settings-return]]
-.Einstellungen zum Erfassen einer Retoure
+.Einstellungen zum Erfassen einer Reparatur
 [cols="1,3"]
 |===
 |Einstellung |Erläuterung
@@ -59,7 +59,7 @@ Gehe wie beschrieben vor, um eine Reparatur anzulegen:
 |Wähle einen Status aus der Dropdown-Liste. Der Standardstatus, der im Menü *Einrichtung » Aufträge » Einstellungen* gespeichert wurde, ist voreingestellt.
 
 | *Eigner*
-|Wähle einen Eigner aus der Dropdown-Liste, der dem Retourenauftrag zugewiesen wird.
+|Wähle einen Eigner aus der Dropdown-Liste, der dem Reparaturauftrag zugewiesen wird.
 
 | *Reparaturstatus*
 |Wähle einen Reparaturstatus aus der Dropdown-Liste, der für alle Artikel der Reparatur gilt. +
@@ -91,7 +91,7 @@ Gehe wie beschrieben vor, um eine Reparatur anzulegen:
 |Zeigt den Name des Artikels an.
 
 | *Zum Warenkorb hinzufügen* (material:add_shopping_cart[])
-|Fügt nur bestimmte Artikel zur Retoure hinzu. Diese Schaltfläche ist nur verfügbar, wenn mindestens 1 Artikel vorhanden ist. +
+|Fügt nur bestimmte Artikel zur Reparatur hinzu. Diese Schaltfläche ist nur verfügbar, wenn mindestens 1 Artikel vorhanden ist. +
 *_Tipp:_* Passe die Artikelmenge bei Bedarf im Feld *Menge* an.
 
 2+^| *Warenkorb*
