FIX several broken links from the spreadsheet

--- a/docs/en-gb/modules/data/pages/formatdesigner-stock-movement.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-stock-movement.adoc
@@ -10,7 +10,7 @@ include::_includes:page$export-reference-catalogue.adoc[]
 
 [#100]
 == StockMovements
-<<table-fields-Item>> lists the fields available for exporting data about stock movements.
+<<table-fields-StockMovements>> lists the fields available for exporting data about stock movements.
 
 [[table-fields-StockMovements]]
 .Fields for exporting stock movements
