--- a/docs/en-gb/modules/data/pages/elasticSync-properties-selection-values.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-properties-selection-values.adoc
@@ -123,7 +123,7 @@ Enter a position number in the CSV file.
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu: xref:item:properties.adoc#700[Setup » Settings » Properties » Configuration » [Open property\] » Values]
+You can find the result of the import in the back end menu: xref:item:properties.adoc#property-selection-values[Setup » Settings » Properties » Configuration » [Open property\] » Values]
 
 '''
 [#330]
@@ -139,7 +139,7 @@ Additionally, use the field xref:data:elasticSync-properties-selection-values.ad
 
 *_Permitted import values_*: Alpha-numeric
 
-You can find the result of the import in the back end menu: xref:item:properties.adoc#700[Setup » Settings » Properties » Configuration » [Open property\] » Values]
+You can find the result of the import in the back end menu: xref:item:properties.adoc#property-selection-values[Setup » Settings » Properties » Configuration » [Open property\] » Values]
 
 '''
 [#340]
@@ -160,7 +160,7 @@ Do you want to delete the selection value?
 |Selection value will be deleted.
 |====
 
-You can find the result of the import in the back end menu: xref:item:properties.adoc#700[Setup » Settings » Properties » Configuration » [Open property\] » Values]
+You can find the result of the import in the back end menu: xref:item:properties.adoc#property-selection-values[Setup » Settings » Properties » Configuration » [Open property\] » Values]
 
 '''
 [#400]
@@ -198,7 +198,7 @@ Add the field once per language.
 [TIP]
 Also use the drop-down list to select the language.
 
-You can find the result of the import in the back end menu: xref:item:properties.adoc#700[Setup » Settings » Properties » Configuration » [Open property\] » Values]
+You can find the result of the import in the back end menu: xref:item:properties.adoc#property-selection-values[Setup » Settings » Properties » Configuration » [Open property\] » Values]
 
 '''
 [#430]
@@ -214,7 +214,7 @@ If you want to save the description in multiple languages, then add the field on
 [TIP]
 Also use the drop-down list to select the language.
 
-You can find the result of the import in the back end menu: xref:item:properties.adoc#700[Setup » Settings » Properties » Configuration » [Open property\] » Values]
+You can find the result of the import in the back end menu: xref:item:properties.adoc#property-selection-values[Setup » Settings » Properties » Configuration » [Open property\] » Values]
 
 '''
 [#440]
