--- a/docs/en-gb/modules/data/pages/exporting-stock-movements.adoc
+++ b/docs/en-gb/modules/data/pages/exporting-stock-movements.adoc
@@ -134,7 +134,7 @@ Information about the available reasons and their IDs for incoming and outgoing 
 [#20]
 == Adding filters
 
-In order to only export specific stock movement data, you can select filters and thus narrow down the data. How to add filters is described in xref:ddata:file-export.adoc#filter-data[this chapter].
+In order to only export specific stock movement data, you can select filters and thus narrow down the data. How to add filters is described in xref:data:file-export.adoc#filter-data[this chapter].
 
 [#30]
 === Available filters
