--- a/docs/en-gb/modules/data/pages/exporting-stocks.adoc
+++ b/docs/en-gb/modules/data/pages/exporting-stocks.adoc
@@ -476,8 +476,8 @@ You can continue working during the export process.
 
 image::data:catalogue-export.gif[]
 
-* xref:data:managing-catalogues.adoc#260[Further information about the export]
-* xref:data:managing-catalogues.adoc#255[Alternative: Export a preview]
+* xref:data:export-standard-formats.adoc#manual-export[Further information about the export]
+* xref:data:export-standard-formats.adoc#preview[Alternative: Export a preview]
 
 --
 
