--- a/docs/en-gb/modules/data/pages/formatdesigner-properties.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-properties.adoc
@@ -15,7 +15,7 @@ This page serves purely as a reference and assumes that you already have a basic
 ====
 This format type exports information about properties and property groups.
 It does _not_ export the links between variations and properties, i.e. it does not indicate which properties are linked to which variations.
-If you want to export such property links, then use the xref:data:item.adoc#1600[format type Item] instead.
+If you want to export such property links, then use the xref:data:formatdesigner-item.adoc#1600[format type Item] instead.
 ====
 
 '''
