ADD fixes order pages

--- a/docs/de-de/modules/auftraege/pages/order-search.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-search.adoc
@@ -13,16 +13,16 @@ Verwende eine der folgenden Möglichkeiten, um nach Aufträgen zu suchen.
 [.instruction]
 Nach Aufträgen suchen:
 
-. Öffne das Menü *Aufträge (Testphase) » Aufträge*.
-.. *_Möglichkeit 1_*: Klicke auf icon:search[role="darkGrey"], um direkt eine Liste aller Aufträge zu sehen.
-.. *_Möglichkeit 2_*: Gib eine Zahl in das Suchfeld ein und klicke auf einen der automatischen Vorschläge.
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+.. *_Möglichkeit 1:_* Klicke auf icon:search[role="darkGrey"], um direkt eine Liste aller Aufträge zu sehen.
+.. *_Möglichkeit 2:_* Gib eine Zahl in das Suchfeld ein und klicke auf einen der automatischen Vorschläge.
 Klicke dann auf icon:search[role="darkGrey"], um die Suche auszuführen.
-.. *_Möglichkeit 3_*: Klicke auf icon:tune[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+.. *_Möglichkeit 3:_* Klicke auf icon:tune[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
 
 [#select-order-filters]
 == Filter wählen
 
-Im Bearbeitungsmodus (icon:design_inline_edit[set=plenty]) der Auftrags-UI unter *Einstellungen » Filter-Einstellungen* werden dir die Filter in den Spalten *Verfügbare Filter* und *Angezeigte Filter* angezeigt. Entscheide selbst, welche Filter in der Auftragsübersicht sichtbar sein sollen.
+Im Bearbeitungsmodus (icon:design_inline_edit[set=plenty]) der Auftrags-Übersicht unter *Einstellungen » Filter-Einstellungen* werden dir die Filter in den Spalten *Verfügbare Filter* und *Angezeigte Filter* angezeigt. Entscheide selbst, welche Filter für die Auftragssuche sichtbar sein sollen.
 
 [[table-available-filters]]
 .Verfügbare und angezeigte Filter in der Auftragssuche
@@ -35,17 +35,17 @@ Im Bearbeitungsmodus (icon:design_inline_edit[set=plenty]) der Auftrags-UI unter
 *_Hinweis:_* Die Filter sind in die Bereiche *Grundlegende*, *Datum*, *Status*, *Artikel*, *Kontakt* und *Marktplatz* gruppiert. Klappe die jeweilige Gruppe auf, um die einzelnen Filter zu sehen und zu wählen.
 
 |*Angezeigte Filter*
-|In der rechten Spalte werden die ausgewählten Filter angezeigt. Diese Filter sind in der Auftragsübersicht sichtbar.
+|In der rechten Spalte werden die ausgewählten Filter angezeigt. Diese Filter sind in der Auftragssuche sichtbar.
 |===
 
 [.instruction]
-Angezeigte Filter wählen:
+Filter zur Anzeige wählen:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Klicke oben rechts auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]). +
 → Der Bearbeitungsmodus wird geöffnet.
 . Klicke rechts oben im Hauptfenster auf *Bearbeiten* (material:mode[]). +
-→ Rechts in den *Einstellungen* werden die Filter-Einstellungen mit den Spalten *Verfügbare Filter* und *Angezeigten Filter* sichtbar.
+→ Rechts in den *Einstellungen* der Auftrags-Übersicht werden die Filter-Einstellungen mit den Spalten *Verfügbare Filter* und *Angezeigten Filter* sichtbar.
 . Füge die Filter aus der Spalte *Verfügbare Filter* mit Klick auf *Filter hinzufügen* (material:add[]) zur Spalte *Angezeigte Filter* hinzu oder ziehe die Filter, die angezeigt werden sollen, per Drag-and-drop vom Bereich *Verfügbare Filter* in den Bereich *Angezeigte Filter*. +
 *_Tipp:_* Ziehe die Filter in der Spalte *Angezeigte Filter* an die gewünschte Stelle und passe so die Reihenfolge beliebig an.
 . *Speichere* (material:save[]) die Einstellungen. +
@@ -120,33 +120,32 @@ Es stehen die folgenden Dokumentarten zur Verfügung: +
 * material:description[] *Lieferschein*
 * material:description[] *Bestellbestätigung*
 * material:description[] *Rücksendeschein*
-Links hinzufügen
 
 | *Zahlungsstatus*
 a|Wähle einen Zahlungsstatus aus der Dropdown-Liste, um nach Aufträgen mit diesem Zahlungsstatus zu suchen. Folgende Zahlungsstatus sind wählbar: +
 
-* Überbezahlt (orange) +
-* Bezahlt (grün) +
-* Teilweise bezahlt (orange) +
-* Im Voraus bezahlt (orange) +
-* Ausstehend (rot)
+* Überbezahlt +
+* Bezahlt +
+* Teilweise bezahlt +
+* Im Voraus bezahlt +
+* Ausstehend
 
 | *Hauptauftrag ausschließen*
-a|Wähle in der Dropdown-Liste, ob bei der Suche auch Hauptaufträge mit ausgegeben werden sollen oder nicht. Dies bezieht sich z.B. auf die Suche von Lieferaufträgen. Die folgenden Optionen stehen dir zur Verfügung. +
+a|Lege über die Dropdown-Liste fest, ob bei der Suche auch Hauptaufträge mit ausgegeben werden sollen oder nicht. Dies bezieht sich z.B. auf die Suche von Lieferaufträgen. Die folgenden Optionen stehen dir zur Verfügung. +
 
 * *leere Option* = ALLE +
 * *Ja* = Es werden keine Hauptaufträge in den Ergebnissen ausgegeben. +
 * *Nein* = Hauptaufträge werden in den Ergebnissen auch ausgegeben.
 
 | *Express-Lieferung*
-a|Wähle, ob du nach Aufträgen suchen möchtest, deren Lieferung als Express-Lieferung versendet werden soll. Die folgenden Optionen stehen zur Verfügung. +
+a|Lege über die Dropdown-Liste fest, ob du nach Aufträgen suchen möchtest, deren Lieferung als Express-Lieferung versendet werden soll. Die folgenden Optionen stehen zur Verfügung. +
 
 * *leere Option* = ALLE +
-* *Ja* = Die Lieferung soll als Express-Lieferung versendet werden. +
-* *Nein* = Die Lieferung soll nicht als Express-Lieferung versendet werden.
+* *Ja* = Die Lieferung wurde als Express-Lieferung versendet. +
+* *Nein* = Die Lieferung wurde nicht als Express-Lieferung versendet.
 
 | *Gültige Rechnung*
-a|Wähle, ob du nach Aufträgen mit einer gültigen Rechnung suchen möchtest. Die folgenden Optionen stehen zur Verfügung. +
+a|Lege über die Dropdown-Liste fest, ob du nach Aufträgen mit einer gültigen Rechnung suchen möchtest. Die folgenden Optionen stehen zur Verfügung. +
 
 * *leere Option* = ALLE +
 * *Ja* = Es wird nur nach Aufträgen mit gültigen Rechnungen gesucht. +
@@ -162,7 +161,7 @@ a|Wähle, ob du nach Aufträgen mit einer gültigen Rechnung suchen möchtest. D
 |Wähle eine oder mehrere Versandarten aus der Dropdown-Liste, um nach Aufträgen mit dieser Versandart zu suchen.
 
 | *Storniert*
-a|Wähle, ob du nach einem stornierten oder nach einem nicht stornierten Auftrag suchen möchtest. Die folgenden Optionen stehen dir zur Verfügung. +
+a|Lege über die Dropdown-Liste fest, ob du nach einem stornierten oder nach einem nicht stornierten Auftrag suchen möchtest. Die folgenden Optionen stehen dir zur Verfügung. +
 
 * *leere Option* = ALLE +
 * *Ja* = Es wird nur nach stornierten Aufträgen gesucht. +
@@ -186,7 +185,7 @@ a|Wähle, ob du nach einem stornierten oder nach einem nicht stornierten Auftrag
 |Gib ein Datum ein oder wähle ein Datum über den Kalender (material:today[]), um nach Aufträgen zu suchen, die an diesem Datum eingegangen sind.
 
 | *Warenausgang*
-|Gib ein Datum ein oder wähle ein Datum über den Kalender (material:today[]), um nach Aufträgen zu suchen, die an diesem Datum verschickt wurden.
+|Gib ein Datum ein oder wähle ein Datum über den Kalender (material:today[]), um nach Aufträgen zu suchen, für die an diesem Datum der Warenausgang gebucht wurde.
 
 | *Zahlungseingang*
 |Gib ein Datum ein oder wähle ein Datum über den Kalender (material:today[]), um nach Aufträgen zu suchen, deren Zahlung an diesem Datum eingegangen ist.
@@ -217,10 +216,10 @@ a|Wähle, ob du nach einem stornierten oder nach einem nicht stornierten Auftrag
 |Gib eine oder mehrere Artikel-IDs ein, um nach Aufträgen mit dieser Artikel-ID zu suchen.
 
 | *Seriennummer*
-|Gib eine Seriennummer ein, um nach Aufträgen mit dieser Seriennummer zu suchen.
+|Gib eine Seriennummer ein, um nach Aufträgen zu suchen, die Artikel bzw. Varianten mit dieser Seriennummer enthalten.
 
 | *Hersteller*
-|Wähle einen oder mehrere Hersteller, um nach Aufträgen mit diesem Hersteller zu suchen.
+|Wähle einen oder mehrere Hersteller, um nach Aufträgen zu suchen, die Artikel bzw. Varianten von diesem Hersteller enthalten.
 
 2+^| *Kontakt*
 
@@ -234,7 +233,7 @@ a|Wähle, ob du nach einem stornierten oder nach einem nicht stornierten Auftrag
 |Wähle ein Lieferland aus der Dropdown-Liste, um nach Aufträgen mit diesem Lieferland zu suchen.
 
 | *Packstation*
-a|Wähle, ob nach Aufträgen mit einer Packstation gesucht werden soll. Die folgenden Optionen stehen dir zur Verfügung: +
+a|Lege über die Dropdown-Liste fest, ob nach Aufträgen gesucht werden soll, die an eine Packstation geliefert werden. Die folgenden Optionen stehen dir zur Verfügung: +
 
 * *leere Option* = ALLE +
 * *Ja* = Es wird nach Aufträgen mit einer Packstation gesucht. +
@@ -246,7 +245,7 @@ a|Wähle, ob nach Aufträgen mit einer Packstation gesucht werden soll. Die folg
 2+^| *Marktplatz*
 
 | *eBay Plus*
-a|Wähle, ob du nach Aufträgen mit eBay Plus suchen möchtest. Die folgenden Optionen stehen dir zur Verfügung: +
+a|Lege über die Dropdown-Liste fest, ob du nach Aufträgen mit eBay Plus suchen möchtest. Die folgenden Optionen stehen dir zur Verfügung: +
 
 * *leere Option* = ALLE
 * *Ja* = Es wird nur nach Aufträgen mit eBay Plus gesucht.
