--- a/docs/de-de/modules/auftraege/pages/order-type-return.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-return.adoc
@@ -149,7 +149,7 @@ Bevor Rücksendescheine erzeugt werden können, muss die Dokumentenvorlage xref:
 Du kannst einen unausgefüllten Rücksendeschein in jedem Paket beilegen, das du versendest. Hierfür generierst du den Rücksendeschein direkt im Auftrag, ohne dass es überhaupt eine Retoure geben muss. Die zweite Möglichkeit ist, dass du deinen Webshop-Kund:innen erlaubst, Retouren im Mein Konto-Bereich des Shops anzumelden und hier die Retourengründe anzugeben. Anschließend kann der Rücksendeschein ausgefüllt ausdruckt werden. Egal wie du den Rücksendeschein deinen Kund:innen zukommen lässt: Damit Retourengründe eingetragen werden können, musst du die Spalte *Retourengründe* unterhalb der Artikelpositionen platzieren.
 ======
 
-Prüfe die Artikelpositionen der Retoure und ändere bei Bedarf die Optionen, z.B. die Menge eines Artikels, bevor du einen Rücksendeschein erzeugst.
+Prüfe die Artikelpositionen des Auftrags und ändere bei Bedarf die Optionen, z.B. die Menge eines Artikels, bevor du einen Rücksendeschein erzeugst.
 
 [.instruction]
 Rücksendeschein manuell erstellen:
@@ -164,26 +164,23 @@ icon:map-signs[] *_Oder:_* Öffne die Retoure, für die du einen Rücksendeschei
 . Klicke anschließend auf *Ausführen*, um den Rücksendeschein zu erstellen.
 
 [[table-generate-return-slip]]
-.Einstellungen für Rücksendeschein vornehmen
+.Einstellungen für Rücksendescheine
 [cols="1,3"]
 |===
 |Einstellung |Erläuterung
 
 | *Datum*
-|Gib ein Datum für den Rücksendeschein ein oder wähle ein Datum über den Kalender (material:today[]). Das aktuelle Datum ist voreingestellt.
+|Gib ein Datum ein oder wähle ein Datum über den Kalender (material:today[]). Dieses Datum wird dann auf dem Rücksendeschein angezeigt. Das aktuelle Datum ist voreingestellt.
 
 | *Kommentar*
-|Gib optional einen Kommentar für den Rücksendeschein ein.
-
-| *Auftrasstatus ändern*
-|Wähle bei Bedarf einen anderen Auftragsstatus aus der Dropdown-Liste.
+|Gib optional einen Kommentar ein, der auf dem Rücksendeschein angezeigt werden soll.
 
 |===
 
 [TIP]
 .Rücksendeschein automatisch generieren
 ======
-Richte eine Ereignisaktion ein, die den Rücksendeschein automatisch generiert. Wenn du hier als Ereignis *Neue Retoure (durch Kunden)* einstellst und nach der Herkunft Webshop filterst, kannst du ausgefüllte Rücksendescheine generieren und musst diese dann lediglich noch zum Download für Kund:innen bereitstellen.
+Richte eine Ereignisaktion ein, die den Rücksendeschein automatisch generiert. Wenn du hier als Ereignis *Neue Retoure (durch Kunden)* einstellst und nach der Herkunft *Webshop* filterst, kannst du ausgefüllte Rücksendescheine generieren und musst diese dann lediglich noch zum Download für Kund:innen bereitstellen.
 ======
 
 [#book-back-items]
@@ -199,7 +196,7 @@ Waren zurückbuchen:
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne die Retoure, für die du Waren zurückbuchen möchtest.
-. Klicke oben auf *Waren zurückbuchen* (material:input[]).
+. Klicke oben auf das Kontextmenü (material:more_vert[] und wähle *Waren zurückbuchen* (material:input[]).
 . Wähle *Ausgewählte Positionen zurückbuchen*, um nur bestimmte Positionen zurückzubuchen oder *Alle Positionen zurückbuchen*, um alle Positionen zurückzubuchen. Beachte dazu die Erläuterungen in <<table-book-back-items>>.
 . *Speichere* (material:save[]) die Einstellungen. +
 → Die Waren werden zurückgebucht.
