update page title for crm faq

--- a/docs/de-de/modules/crm/pages/faq.adoc
+++ b/docs/de-de/modules/crm/pages/faq.adoc
@@ -1,4 +1,4 @@
-= Fragen und Antworten
+= FAQ: CRM
 :keywords: FAQ CRM, Fragen und Antworten CRM
 :description: Auf dieser Handbuchseite findest du Fragen und Antworten aus dem Themengebiet CRM.
 :author: team-crm
