--- a/docs/en-gb/modules/crm/pages/faq.adoc
+++ b/docs/en-gb/modules/crm/pages/faq.adoc
@@ -1,4 +1,4 @@
-= FAQ
+= FAQ: CRM
 :keywords: FAQ CRM, frequently asked questions CRM
 :description: On this page, you can find questions and answers about the CRM area.
 :author: team-crm
