add some more content

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -417,12 +417,40 @@ Die Liste enthält alle <<#footer-erstellen, Footer>>, die du bereits erstellt h
 | *Speichern*
 |Speichert die Einstellungen.
 
-2+^| Bereich *Einstellungen* auf der rechten Seite +
-Wir empfehlen zunächst die Einstellungen im Bereich *Einstellungen* vorzunehmen, bevor der eigentliche Inhalt der Vorlage im mittleren Bereich bearbeitet wird. +
-Der Vorteil bei dieser Reihenfolge ist, dass du auch die Einstellungen und nicht nur den Inhalt der Vorlage <<#vorlage-kopieren, kopieren>> kannst.
+2+^| Bereich für den Inhalt der Vorlage +
+In diesem Bereich erstellst du den Inhalt deiner Vorlage mit Widgets und Variablen.
+
+|[#intable-template-settings-add]*Hinzufügen*
+|Klicke auf material:add[] (*Hinzufügen*), um die Sprache der Vorlage zu wählen.
+
+|[#intable-template-settings-subject]*Betreff*
+|Wie lautet der Betreff deiner E-Mail? Gib den Betreff in der jeweiligen Sprache ein.
+*_Hinweis:_* Dieses Feld ist ein Pflichtfeld.
+
+| *Speichern*
+|Speichert die Einstellung.
+
+// TODO: hier ein Bild dieser Ansicht mit Sprache(n) und Betreff verlinken, das unterhalb der Tabelle angezeigt werden soll. 
+
+|[#intable-template-settings-edit]*Bearbeiten*
+|Klicke auf material:edit[] in der Zeile des Betreffs, um den Inhalt der Vorlage zu bearbeiten und <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>> einzufügen. +
+Der Editor-Bereich öffnet sich und du kannst über die Widgets den Inhalt der Vorlage bearbeiten. +
+Die E-Mail-Vorlagen verwenden das Multipart-Format. Die E-Mails werden also gleichzeitig in einer HTML- und in einer Textversion versendet.
+
+|[#intable-template-settings-preview]*Vorschau*
+|Klicke auf material:preview[] und wähle *Vorschau HTML* oder *Vorschau reiner Text*.
+
+|[#intable-template-settings-copy]*Kopieren*
+|Klicke auf material:more_vert[] und dann auf material:copy_content[] *Kopieren*, um den Inhalt und die Einstellungen der Vorlage für eine andere Sprache zu kopieren.
+
+|[#intable-template-settings-delete]*Löschen*
+|Klicke auf material:more_vert[] und dann auf material:delete[] *Löschen*, um die Vorlage zu löschen.
+
+2+^|[#intable-general-template-settings]*Einstellungen* +
+Im Bereich *Einstellungen* auf der rechten Seite deines Bildschirms nimmst du die allgemeinen Einstellungen für die Vorlage in der jeweiligen Sprache vor. 
 
 |[#intable-template-settings-name]*Name*
-|Hier siehst du den Namen der Vorlage, den du eben eingegeben hast. Du kannst den Namen hier anpassen, wenn gewünscht.
+|Hier siehst du den Namen der Vorlage, den du eben eingegeben hast. Du kannst den Namen anpassen, wenn gewünscht.
 
 |[#intable-template-settings-owner]*Eigner*
 |Wähle einen Eigner aus der Dropdown-Liste.
@@ -454,63 +482,50 @@ Der Vorteil bei dieser Reihenfolge ist, dass du auch die Einstellungen und nicht
 |An wen soll die E-Mail als blinde Kopie gesendet werden? Gib die E-Mail-Adresse(n) ein. +
 *_Hinweis:_* Wenn du mehrere E-Mail-Adressen eingibst, trenne diese jeweils durch ein Komma.
 
-2+^| *Sprachabhängige Einstellungen* (material:translate[])
+2+^|[#intable-language-specific-settings]*Sprachabhängige Einstellungen* (material:translate[]) +
+In diesem Bereich nimmst du die sprachabhängigen Einstellungen vor.
 
 | material:translate[]
 |Mit einem Klick auf material:translate[] oben rechts im Bereich *Einstellungen* öffnen sich die sprachabhängigen Einstellungen der Vorlagen.
 
 |[#intable-template-settings-subject]*Betreff*
-| 
-
-// TODO: Erklärung ergänzen
+|Hier siehst du den Betreff der Vorlage. Du kannst den Betreff anpassen, wenn gewünscht. 
 
 |[#intable-template-settings-static-attachments]*Statische Anhänge*
 |In dieser Dropdown-Liste stehen dir alle Anhänge zur Verfügung, die du vorher im Menü *CMS » Dokumente* hochgeladen hast. Dies sind zum Beispiel Installationsanleitungen oder Produktdatenblätter in der jeweiligen Sprache. Wähle (material:check_box[role=skyBlue]) bis zu 3 statische Anhänge aus der Dropdown-Liste.
 
 |[#intable-template-settings-custom-styles]*Benutzerdefiniertes Styling*
-|Hier kannst du das CSS-Styling deiner Vorlage anpassen. Im Folgenden findest du einige gängige Beispiele: +
-*_Breite der Vorlage:_* Gib `max-width:` gefolgt von der gewünschten Breite in Pixel in dieses Feld ein, z.B. `max-width:1200px`.
-*_Hintergrundfarbe:_* Gib `background-color:` gefolgt von dem gewünschten link:https://htmlcolorcodes.com/[HTML-Farbencode^] in dieses Feld ein, z.B. `background-color:&#35;A9F5D0;`. +
-*_Schriftfarbe:_* Gib `color:` gefolgt von dem gewünschten link:https://htmlcolorcodes.com/[HTML-Farbcode^] in dieses Feld ein, z.B. `color:&#35;A0A1B;`. +
-*_Schriftgröße:_* Gib `font-size:` gefolgt von dem gewünschten Schriftgröße in Pixel in dieses Feld ein, z.B. `font-size:20px;`. +
-*_Schriftstärke:_* Gib `font-weight:` gefolgt von der gewünschten Schriftstärke in dieses Feld ein, z.B. `font-weight:700;`. +
-*_Textausrichtung:_* Gib `text-align:center;` in dieses Feld ein, wenn der Text zentriert angezeigt werden soll. Gib `text-align:right;` ein, wenn der Text rechtsbündig angezeigt werden soll. +
-*_Hintergrundbild:_* Gib `background-image: url(_Link_zum_Bild_);` in dieses Feld ein und ersetze `_Link_zum_Bild_` durch den entsprechenden Bild-Link, um ein Hintergrundbild in deiner Vorlage anzuzeigen. +
-*_Textrahmen:_* Gib z.B. `border: 1px solid blue;` in dieses Feld ein, um einen 1 px schmalen, blauen Rahmen um den Text einzufügen. +
-*_Innenabstand:_* Gib `padding:10px;` in dieses Feld ein, wenn der Abstand auf allen Seiten 10px betragen soll. Gib `padding: 10px 20px;` ein, wenn der Abstand oben und unten 10px und links und rechts 20px betragen soll. +
-*_Hinweis:_* Wenn du mehrere CSS-Stylings für die Vorlage speichern möchtest, gib alle Werte hintereinander, getrennt durch ein Semikolon ein. +
-*_Tipp:_* Speichere die Einstellungen. Anschließend ist die Schaltfläche *Vorschau* (material:preview[]) sichtbar, mit der du deine Eingaben prüfen und ggf. weitere Anpassungen vornehmen kannst.
-
-2+^| Bereich für den Inhalt der Vorlage
-// TODO: hier noch einen besseren Namen für den Bereich überlegen.
-
-|[#intable-template-settings-add]*Hinzufügen*
-|Klicke auf material:add[] (*Hinzufügen*), um die Sprache der Vorlage zu wählen.
-
-|[#intable-template-settings-subject]*Betreff*
-|Wie lautet der Betreff deiner E-Mail? +
-*_Hinweis:_* Dieses Feld ist ein Pflichtfeld.
-
-| *Speichern*
-|Speichert die Einstellung.
-
-// TODO: hier ein Bild dieser Ansicht mit Sprache und Betreff verlinken, das unterhalb der Tabelle angezeigt werden soll. 
-
-|[#intable-template-settings-edit]*Bearbeiten*
-|Klicke auf material:edit[] in der Zeile des Betreffs, um den Inhalt der Vorlage zu bearbeiten und <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>> einzufügen. +
-Der Editor-Bereich öffnet sich und du kannst über die Widgets den Inhalt der Vorlage bearbeiten. +
-Die E-Mail-Vorlagen verwenden das Multipart-Format. Die E-Mails werden also gleichzeitig in einer HTML- und in einer Textversion versendet.
-
-|[#intable-template-settings-preview]*Vorschau*
-|Klicke auf material:preview[] und wähle *Vorschau HTML* oder *Vorschau reiner Text*.
-
-|[#intable-template-settings-copy]*Kopieren*
-|Klicke auf material:more_vert[] und dann auf material:copy_content[] *Kopieren*, um den Inhalt und die Einstellungen der Vorlage für eine andere Sprache zu kopieren.
-
-|[#intable-template-settings-delete]*Löschen*
-|Klicke auf material:more_vert[] und dann auf material:delete[] *Löschen*, um die Vorlage zu löschen.
+|Hier kannst du das CSS-Styling deiner Vorlage anpassen. <<#beispiele-benutzerdefiniertes-styling, In der aufklappbaren Box unterhalb dieser Tabelle>> findest du einige gängige Beispiele, wie du das Styling deiner Vorlage anpassen kannst. +
+*_Tipp:_* Speichere die Einstellungen und öffne anschließend die *Vorschau* (material:preview[]), um deine Eingaben zu prüfen und ggf. weitere Anpassungen vorzunehmen.
 
 |====
+
+[#beispiele-benutzerdefiniertes-styling]
+[.collapseBox]
+.Benutzerdefiniertes Styling: Gängige Beispiele
+--
+In diesem Bereich findest du einige gängige Beispiele, um das Styling deiner Vorlage anzupassen.
+
+*_Hinweis:_* Wenn du mehrere CSS-Stylings für die Vorlage speichern möchtest, gib alle Werte hintereinander, getrennt durch ein Semikolon, ein.
+
+*_Breite der Vorlage:_* Gib `max-width:` gefolgt von der gewünschten Breite in Pixel in dieses Feld ein, z.B. `max-width:1200px`. +
+
+*_Hintergrundfarbe:_* Gib `background-color:` gefolgt von dem gewünschten link:https://htmlcolorcodes.com/[HTML-Farbencode^] in dieses Feld ein, z.B. `background-color:&#35;A9F5D0;`. +
+
+*_Schriftfarbe:_* Gib `color:` gefolgt von dem gewünschten link:https://htmlcolorcodes.com/[HTML-Farbcode^] in dieses Feld ein, z.B. `color:&#35;A0A1B;`. +
+
+*_Schriftgröße:_* Gib `font-size:` gefolgt von dem gewünschten Schriftgröße in Pixel in dieses Feld ein, z.B. `font-size:20px;`. +
+
+*_Schriftstärke:_* Gib `font-weight:` gefolgt von der gewünschten Schriftstärke in dieses Feld ein, z.B. `font-weight:700;`. +
+
+*_Textausrichtung:_* Gib `text-align:center;` in dieses Feld ein, wenn der Text zentriert angezeigt werden soll. Gib `text-align:right;` ein, wenn der Text rechtsbündig angezeigt werden soll. +
+
+*_Hintergrundbild:_* Gib `background-image: url(_Link_zum_Bild_);` in dieses Feld ein und ersetze `_Link_zum_Bild_` durch den entsprechenden Bild-Link, um ein Hintergrundbild in deiner Vorlage anzuzeigen. +
+
+*_Textrahmen:_* Gib z.B. `border: 1px solid blue;` in dieses Feld ein, um einen 1 px schmalen, blauen Rahmen um den Text einzufügen. +
+
+*_Innenabstand:_* Gib `padding:10px;` in dieses Feld ein, wenn der Abstand auf allen Seiten 10px betragen soll. Gib `padding: 10px 20px;` ein, wenn der Abstand oben und unten 10px und links und rechts 20px betragen soll. +
+--
 
 Gestalte nun den Inhalt deiner E-Mail, indem du über die Widgets Variablen einfügst. Wie du dazu vorgehst, ist im folgenden Kapitel <<#widget-einfuegen, Widget in Vorlage einfügen>> beschrieben.
 
@@ -903,6 +918,9 @@ Vorlage bearbeiten:
 === Vorlage kopieren
 
 Du möchtest eine vorhandene Vorlage kopieren, um Zeit bei dem Erstellen einer neuen Vorlage mit ähnlichen Inhalten zu sparen? Gehe wie im Folgenden beschrieben vor.
+
+[TIP]
+Nimm _vor dem Kopieren_ der Vorlage auch die Einstellungen im Bereich <<#intable-general-template-settings, Einstellungen>> vor. Der Vorteil bei dieser Reihenfolge ist, dass du so auch die Einstellungen selbst und nicht nur den Inhalt der Vorlage kopierst udn diese nicht erneut für die anderen Vorlagen vornehmen musst.
 
 [.instruction]
 Vorlage kopieren:
