--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -106,7 +106,7 @@
 ** xref:crm:ar-list.adoc[Accounts receivable]
 ** xref:crm:using-the-ticket-system.adoc[Ticket system]
 ** xref:crm:sending-newsletters.adoc[Newsletters]
-** xref:crm:faq.adoc[FAQ]
+** xref:crm:faq.adoc[FAQ: CRM]
 ** xref:crm:practical-examples.adoc[Practical examples]
 *** xref:crm:practical-example-send-tracking-url.adoc[Sending tracking URLs to customers]
 ** xref:crm:managing-contacts.adoc[Contacts (old tool)]
