--- a/docs/de-de/modules/auftraege/pages/order-type-multi-order.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-multi-order.adoc
@@ -6,6 +6,8 @@
 Unbezahlte Aufträge können in einem Sammelauftrag zusammengefasst werden. Du kannst im Menü *Aufträge » Aufträge (Testphase)* oder im Tab *Aufträge* eines Kontakts mit dem Suchfilter *Auftragsstatus*, z.B. anhand eines Status im Bereich *[3] Warten auf Zahlung*, nach solchen unbezahlten Aufträgen suchen. Somit hast du zwei Möglichkeiten, Sammelaufträge zu erzeugen, die nachfolgend beschrieben werden.
 Für beide Möglichkeiten übernimmst du im Menü *Aufträge » Sammelaufträge* noch nicht bezahlte Aufträge in einen Sammelauftrag. Im Bereich *Dokumente* des Sammelauftrags ist dann das Erzeugen von Sammelrechnungen möglich.
 
+// TODO: werden im Folgenden wirklich beide Wege beschrieben? Wenn ja, würde ich darauf auch verlinken.
+
 [#basic-settings-multi-order]
 == Grundeinstellungen für Sammelaufträge vornehmen
 
@@ -62,7 +64,7 @@ Sammelauftrag für eine Kundenklasse anlegen:
 == Sammelauftrag pro Kontakt anlegen
 
 Eine Kund:in möchte nicht jede Rechnung einzeln bezahlen, sondern pro Monat oder pro Quartal bezahlen. +
-In diesem Fall legst du einen Sammelauftrag für einen bestimmten Kontakt direkt im Kontaktdatensatz im Menü *CRM » Kontakte* an. Öffne dazu einen Kontakt und wähle links im Menü die Option *Neuer Sammelauftrag*. Anschließend wird automatisch ein Sammelauftrag generiert, der alle unbezahlten Aufträge des Kontakts enthält.
+In diesem Fall legst du einen Sammelauftrag für einen bestimmten Kontakt direkt im Kontaktdatensatz im Menü *CRM » Kontakte* an. Öffne dazu einen Kontakt und wähle im Bereich *Aufträge* mit einem Klick auf material:add[] die Option *Neuer Sammelauftrag*. Anschließend wird automatisch ein Sammelauftrag generiert, der alle unbezahlten Aufträge des Kontakts enthält.
 
 [TIP]
 .Aufträge prüfen
