--- a/docs/de-de/modules/auftraege/pages/order-type-multi-order.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-multi-order.adoc
@@ -3,20 +3,18 @@
 :keywords: Sammelauftrag, Sammelrechnung, Sammelgutschrift
 :author: team-order-core
 
-Unbezahlte Aufträge können in einem Sammelauftrag zusammengefasst werden. Du kannst im Menü *Aufträge » Aufträge (Testphase)* oder im Tab *Aufträge* eines Kontakts mit dem Suchfilter *Auftragsstatus*, z.B. anhand eines Status im Bereich *[3] Warten auf Zahlung*, nach solchen unbezahlten Aufträgen suchen. Somit hast du zwei Möglichkeiten, Sammelaufträge zu erzeugen, die nachfolgend beschrieben werden.
-Für beide Möglichkeiten übernimmst du im Menü *Aufträge » Sammelaufträge* noch nicht bezahlte Aufträge in einen Sammelauftrag. Im Bereich *Dokumente* des Sammelauftrags ist dann das Erzeugen von Sammelrechnungen möglich.
-
-// TODO: werden im Folgenden wirklich beide Wege beschrieben? Wenn ja, würde ich darauf auch verlinken.
+Unbezahlte Aufträge können in einem Sammelauftrag zusammengefasst werden. Du kannst im Menü *Aufträge » Aufträge (Testphase)* mit dem Suchfilter *Auftragsstatus*, z.B. anhand des Status *[3] Warten auf Zahlung*, nach solchen unbezahlten Aufträgen suchen. +
+Dafür übernimmst du im Menü *Aufträge » Sammelaufträge* noch nicht bezahlte Aufträge in einen Sammelauftrag. Im Bereich *Dokumente* des Sammelauftrags ist dann das Erzeugen von Sammelrechnungen möglich.
 
 [#basic-settings-multi-order]
 == Grundeinstellungen für Sammelaufträge vornehmen
 
-Im Menü *Einrichtung » Aufträge » Auftragstypen » Multi-Order* nimmst du die Grundeinstellungen für Sammelaufträge vor. Hier legst du beispielsweise fest, für welche Auftragstypen und Auftragsstatus Sammelaufträge angelegt werden können.
+Im Menü *Einrichtung » Aufträge » Auftragstypen » Sammelauftrag* nimmst du die Grundeinstellungen für Sammelaufträge vor. Hier legst du beispielsweise fest, für welche Auftragstypen und Auftragsstatus Sammelaufträge angelegt werden können.
 
 [.instruction]
 Grundeinstellungen für Sammelaufträge vornehmen:
 
-. Öffne das Menü *Einrichtung » Aufträge » Auftragstypen » Multi-Order*.
+. Öffne das Menü *Einrichtung » Aufträge » Auftragstypen » Sammelauftrag*.
 . Nimm die Einstellungen gemäß <<table-multi-order-settings>> vor.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
@@ -69,7 +67,7 @@ In diesem Fall legst du einen Sammelauftrag für einen bestimmten Kontakt direkt
 [TIP]
 .Aufträge prüfen
 ======
-Um sicher zu gehen, dass geeignete Aufträge für die Erzeugung eines Sammelauftrags vorhanden sind, suche im Tab *Aufträge* der Kund:in nach unbezahlten Aufträgen.
+Um sicher zu gehen, dass geeignete Aufträge für das Erzeugen eines Sammelauftrags vorhanden sind, verwende die Filter im Menü *Aufträge » Aufträge (Testphase)*, um nach unbezahlten Aufträgen der Kund:in zu suchen.
 ======
 
 [#generate-multi-order]
@@ -140,7 +138,7 @@ include::_includes:partial$event-procedure.adoc[]
 == Sammelgutschrift generieren
 
 Eine Sammelgutschrift erzeugst du im Menü *Aufträge » Sammelaufträge*. +
-Alle Gutschriften der ausgewählten Kundenklasse werden gesammelt in einer Sammelgutschrift abgelegt. Diese Sammelgutschrift ist wie Sammelaufträge auch nach Erstellung in der Auftragsübersicht bearbeitbar. Je nach Anwendungsfall empfehlen wir, eigene xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] für Sammelgutschriften anzulegen.
+Alle Gutschriften der ausgewählten Kundenklasse werden gesammelt in einer Sammelgutschrift abgelegt. Diese Sammelgutschrift ist wie Sammelaufträge auch nach dem Erstellen in der Auftragsübersicht bearbeitbar. Je nach Anwendungsfall empfehlen wir, eigene xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] für Sammelgutschriften anzulegen.
 
 [.instruction]
 Sammelgutschrift für eine Kundenklasse generieren:
