Added info about maximum number of images

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -441,7 +441,11 @@ Wenn du den Katalog aktiviert hast, werden die Artikeldaten einmal täglich auto
 Für jede Produktkategorie auf Kaufland gibt es ein eigenes Katalog-Format. In jedem Format werden unterschiedliche Artikeldaten exportiert, je nachdem, welche Informationen Kaufland für eine Produktkategorie benötigt. In dem Format für *Fernseher* müssen beispielsweise andere Artikeldaten verknüpft werden als in dem Format für *Kameras*. +
 Du musst also für jede Produktkategorie von Kaufland, in der du Artikel verkaufen möchtest, einen eigenen Katalog erstellen.
 
-*_Hinweis:_* Für Kaufland können Kataloge momentan nur mit dem Assistenten *Kaufland - Kataloge erstellen* und _nicht_ über das Menü *Daten » Kataloge* erstellt werden.
+[IMPORTANT]
+.Kataloge im Assistenten erstellen
+====
+Für Kaufland können Kataloge momentan nur mit dem Assistenten *Kaufland - Kataloge erstellen* und _nicht_ über das Menü *Daten » Kataloge* erstellt werden.
+====
 
 :number-of-boxes: Info-Box
 
