--- a/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
@@ -142,7 +142,9 @@ _oder_
 
 bei mehreren Bildern:
 
-* *Bild » Varianten Bilder » Bilderliste*, Bildinformation *Vollbild-URL*
+* *Bild » Varianten Bilder » Bilderliste*, Bildinformation *Vollbild-URL* +
+
+*_Hinweis:_* Für die *Bilderliste* muss eine *maximale Bildanzahl* angegeben werden.
 
 | Kategorie
 | ja
