--- a/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
+++ b/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
@@ -487,7 +487,7 @@ The first time that eBay messages are imported, only the ones from the last 7 da
 
 Forms allow you to integrate contact forms in your online shop. The forms are filled out by visitors in your online shop and a ticket is created. You can answer the customer directly from the ticket. However, this is only possible if a valid email account was set up under *Setup » CRM » Ticket system » Email accounts*.
 
-You receive an email notification whenever a new message is received. This notification is separate from the ticket and any procedures that are carried out in the ticket system. The notification is sent to the address that was saved under *Setup » Client » [Select client] » Email » Login details*. You receive this email notification even if you did not xref:crm:using-the-ticket-system.adoc#100[book] the ticket system.
+You receive an email notification whenever a new message is received. This notification is separate from the ticket and any procedures that are carried out in the ticket system. The notification is sent to the address that was saved under *Setup » Client » [Select client] » Email » Login details*. You receive this email notification even if you did not book the ticket system.
 
 [TIP]
 .Example for using the contact form
