--- a/docs/en-gb/modules/crm/pages/faq.adoc
+++ b/docs/en-gb/modules/crm/pages/faq.adoc
@@ -82,7 +82,7 @@ Inform the customer that her data has now been deleted from your system. If in d
 
 *_Note:_* If the button *Anonymise data record* is deactivated in the data record that you want to delete, it means that this data record is a guest order. In this case, the button is deactivated because the data record is not a contact. Deleting or making the data illegible in such way that no reference to this person is given any longer is _not_ needed for guest orders. 
 
-For further information, refer to the xref:crm:quick-search.adoc#ananomyise-data-record[Quick search] page.
+For further information, refer to the xref:crm:quick-search.adoc#anonymise-data-record[Quick search] page.
 --
 
 [#faq-anonymise-button-contacts]
